--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,38 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
-  padding: 2em;
+  padding: 0 2rem 1rem 2rem;
 }
 
-.read-the-docs {
-  color: #888;
+select {
+    margin: 10px;
+    padding: 5px;
+    font-size: 1rem;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
+
+select:hover {
+  border-color: #646cff;
+  box-shadow: 0 0 5px rgba(136, 136, 136, 0.5);
+}
+
+.weather-container{
+  margin-top: 1rem;
+  background-color: #0000002d;
+  border: 1px solid #453f3f;
+  border-radius: 8px;
+  padding: 2rem 1rem;
+}
+
+.weather-cards {
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+
